Update Menu.java